# cellkit

./: .gitignore  AGENTS.md  README.md  pyproject.toml
samples/dataset/: transform.py
scripts/: explore_dataset.py  preprocess_dataset.py  subsample_dataset.py
src/cellkit/: losses.py  masking.py
src/cellkit/data/: dataset.py  explore.py  io.py  preprocessing.py  reader.py  truncation.py  util.py
src/cellkit/model/: embedding.py  heads.py  mlp.py  norm.py  transformer.py
src/cellkit/utils/: checkpoints.py  config.py  prediction_logging.py  util.py
tests/: test_explore.py  test_import.py  test_io.py  test_losses.py  test_masking.py  test_util.py
tests/data/: test_dataset.py  test_explore.py  test_io.py  test_preprocessing.py  test_reader.py  test_truncation.py  test_util.py
tests/model/: test_embedding.py  test_heads.py  test_mlp.py  test_norm.py  test_transformer.py
tests/utils/: test_checkpoints.py  test_config.py  test_prediction_logging.py  test_run_dirs.py
