[project]
name = "cellkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.9",
    "numpy>=1.26,<2.4",
    "pandas>=2.3.3",
    "scanpy>=1.10",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
